--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.0",
-    "@n8n/eslint-config": "workspace:*",
+    "@n8n/eslint-config": "^1.0.0",
     "@types/jest": "^29.5.3",
     "@types/node": "*",
     "@types/supertest": "^6.0.3",
